Prevent display overflow by limiting number of allowed digits

--- a/style.css
+++ b/style.css
@@ -1,31 +1,46 @@
 * {
     box-sizing: border-box;
     font-family: monospace;
-    font-size: 16pt;
 }
 
 .container {
+    --pad-size: 12px;
+    --button-size: 50px;
+    --container-border-size: 4px;
+    --button-border-size: 2px;
+    --display-font-size: 20pt;
+    --button-font-size: 16pt;
     display: inline-flex;
     flex-direction: column;
-    border: black 4pt solid;
-    padding: 12px;
+    border: black var(--container-border-size) solid;
+    padding: var(--pad-size);
 }
 
 #display {
-    border: black 4pt solid;
-    margin-bottom: 12px;
-    height: 84px;
-    padding: 12px;
-    font-size: 24px;
+    border: black var(--container-border-size) solid;
+    margin-bottom: var(--pad-size);
+    height: calc(
+        var(--button-size) 
+        + 2 * var(--pad-size) 
+        + 2 * var(--container-border-size) 
+    );
+    width: calc(
+        4 * var(--button-size)
+        + 8 * var(--pad-size)
+        + 2 * var(--container-border-size) 
+    );
+    padding: var(--pad-size);
+    font-size: var(--display-font-size);
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
+    text-align: right;
 }
 
 .button-container {
     display: inline-flex;
     flex-direction: column;
-    border: black 4pt solid;
+    border: black var(--container-border-size) solid;
 }
 
 .button-row {
@@ -38,13 +53,14 @@
 }
 
 .button {
-    border: black 2pt solid;
-    margin: 12px;
-    height: 50px;
-    width: 50px;
+    border: black var(--button-border-size) solid;
+    margin: var(--pad-size);
+    height: var(--button-size);
+    width: var(--button-size);
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: var(--button-font-size);
 }
 
 .button-wide {
